--- a/src/pages/PetUpdate/styles.css
+++ b/src/pages/PetUpdate/styles.css
@@ -1,13 +1,13 @@
-#page-teacher-form {
+#page-pet-form {
     width: 100vw;
     height: 100vh;
 }
 
-#page-teacher-form .page-header .header-content {
+#page-pet-form .page-header .header-content {
     margin-bottom: 6.4rem;
 }
 
-#page-teacher-form main {
+#page-pet-form main {
     background: var(--color-box-base);
     width: 100%;
     max-width: 74rem;
@@ -17,16 +17,16 @@
     overflow: hidden;
 }
 
-#page-teacher-form main fieldset {
+#page-pet-form main fieldset {
     border: 0;
     padding: 0 2.4rem;
 }
 
-#page-teacher-form main fieldset + fieldset {
+#page-pet-form main fieldset + fieldset {
     margin-top: 6.4rem;
 }
 
-#page-teacher-form main fieldset legend {
+#page-pet-form main fieldset legend {
     font: 700 2.4rem Archivo;
     color: var(--color-box-title);
     margin-bottom: 2.4rem;
@@ -37,7 +37,7 @@
     padding-bottom: 1.6rem;
     border-bottom: 1px solid var(--color-line-in-white);
 }
-#page-teacher-form main fieldset legend button {
+#page-pet-form main fieldset legend button {
     background: none;
     border: 0;
     color: var(--color-primary);
@@ -46,38 +46,38 @@
     transition: color 0.2s;
 }
 
-#page-teacher-form main fieldset legend button:hover{
+#page-pet-form main fieldset legend button:hover{
     color: var(--color-primary-dark);
 }
 
-#page-teacher-form main fieldset .input-block + .textarea-block,
-#page-teacher-form main fieldset .select-block + .input-block {
+#page-pet-form main fieldset .input-block + .textarea-block,
+#page-pet-form main fieldset .select-block + .input-block {
     margin-top: 2.4rem;
 }
 
 
-#page-teacher-form main label {
+#page-pet-form main label {
     color: var(--color-text-complement);
 }
 
-#page-teacher-form main .schedule-item {
+#page-pet-form main .schedule-item {
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     column-gap: 1.6rem;
 }
 
-#page-teacher-form main .schedule-item .input-block {
+#page-pet-form main .schedule-item .input-block {
     margin-top: 0!important;
 }
 
-#page-teacher-form main footer {
+#page-pet-form main footer {
     padding: 4rem 2.4rem;
     background: var(--color-box-footer);
     border-top: 1px solid var(--color-line-in-white);
     margin-top: 6.4rem;
 }
 
-#page-teacher-form main footer p {
+#page-pet-form main footer p {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,11 +86,11 @@
     color: var(--color-text-complement);
 }
 
-#page-teacher-form main footer p img {
+#page-pet-form main footer p img {
     margin-right:  2rem;
 }
 
-#page-teacher-form main footer button {
+#page-pet-form main footer button {
     width: 100%;
     height: 5.6rem;
     background: var(--color-secundary);
@@ -107,35 +107,35 @@
     margin-top: 3.2rem;
 }   
 
-#page-teacher-form main footer button:hover{
+#page-pet-form main footer button:hover{
     background: var(--color-secundary-dark);
 }
 
 @media (min-width: 700px) {
-    #page-teacher-form {
+    #page-pet-form {
         max-width: 100vw;
     }
 
-    #page-teacher-form .page-header .header-content{
+    #page-pet-form .page-header .header-content{
         margin-bottom: 0;
     }
 
-    #page-teacher-form main fieldset {
+    #page-pet-form main fieldset {
         padding: 0 6.4rem;
     }
 
-    #page-teacher-form main footer {
+    #page-pet-form main footer {
         padding: 4.0rem 6.4rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
 
-    #page-teacher-form main footer p {
+    #page-pet-form main footer p {
         justify-content: space-between;
     }
 
-    #page-teacher-form main footer button {
+    #page-pet-form main footer button {
         width: 20rem;
         margin-top: 0;
     }
